# nested-learning-fed

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml  train.py  train_fsdp.py
configs/: mid_smoke.yaml  mid_stage2.yaml  mid_stage2_smoke.yaml  mid_titan_baseline.yaml  pilot.yaml  pilot_paper_faithful.yaml  pilot_selfmod_paper_faithful.yaml  pilot_smoke.yaml
docker/: Dockerfile.dist
docs/: BUG_REPORT_CHECKLIST.md  COMPATIBILITY_MATRIX.md  IMPLEMENTATION_STATUS.md  P4_REMEDIATION_PLAN.md  PACKAGE_RELEASE_CHECKLIST.md  PAPER_COMPLIANCE.md  PYPI_TRUSTED_PUBLISHING.md  STREAMING_CONTRACT.md  VERSIONING_POLICY.md  continual_eval.md  data_pipeline.md  experiments_report.md  release_checklist.md  stage2_plan.md  stage2_progress.md  zeroshot_eval.md
eval/: continual_pilot.json  continual_titan.json  niah_pilot.json  niah_titan.json  passkey_pilot.json  passkey_titan.json  pg19_pilot.json  pg19_titan.json  zeroshot_pilot.json  zeroshot_titan.json
luanvan/: CLAUDE.md
reports/: ablations.md  cadence_mechanism_audit_smoke.json  compliance_summary_pilot.json  compliance_summary_pilot_paper_faithful.json  next_backlog_scoped.md  security_release_gate.md  sprint_completion_report.md
scripts/: package_pilot_release.sh  run_cpu_ddp_smoke.sh  run_mechanism_audit_smoke.sh
tests/: test_algorithm_mode_grad.py  test_attention_cache.py  test_attention_features.py  test_boundary_state_mode.py  test_boundary_state_training_loop.py  test_checkpoint_metadata_and_eval_loaders.py  test_cli_tooling.py  test_cms.py  test_cms_cross_call.py  test_cms_delta_rule.py  test_cms_flush_partial.py  test_compile_toggle.py  test_compliance_report.py  test_continual_eval_state_mode.py  test_data_scripts_help.py  test_data_split_fallbacks.py  test_determinism_seed.py  test_device_resolution.py  test_distributed_fail_fast.py  test_eval_state.py  test_m3.py  (+30 more)
(+109 files in other folders)
